Add rule violation endpoint and add ruleViolations list to gamesession get
