# api/specter-openapi.yaml
@@ -258,6 +258,17 @@ paths:
                     type: string
                     description: current state of the gamesession
                     example: "LOBBY"
+                  ruleViolations:
+                    type: array
+                    description: rule violations in gamesession
+                    items:
+                      type: object
+                      example: {  userId: "639e043b093a78d12d4f7491", borderViolationTime: 55 }
+                      properties:
+                        userId:
+                          type: string
+                        borderViolationTime:
+                          type: number
         "404":
           description: Gamesession doesn't exist
           content:
@@ -572,9 +583,27 @@ paths:
         schema:
           type: string
           example: "637620d6af622b1c8dbf7f7e"
+      requestBody:
+        description: Rule violation information
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              example: { borderViolationTime: 15 }
       responses:
         "200":
-          description: "todo"
+          description: "Rule violations updated"
+        "404":
+          description: Authentication failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Gamesession not found"  
         "401":
           description: Authentication failed
           content:
@@ -587,6 +616,33 @@ paths:
                     example: "not authorized"
       security:
       - bearerAuth: []
+    # get:
+    #   summary: Get all Rule Violations
+    #   parameters:
+    #   - name: gamesessionId
+    #     in: path
+    #     description: Numeric ID of the gamesession to get
+    #     required: true
+    #     style: simple
+    #     explode: false
+    #     schema:
+    #       type: string
+    #       example: "637620d6af622b1c8dbf7f7e"
+    #   responses:
+    #     "200":
+    #       description: Remove user from userlist
+    #     "401":
+    #       description: Authentication failed
+    #       content:
+    #         application/json:
+    #           schema:
+    #             type: object
+    #             properties:
+    #               error:
+    #                 type: string
+    #                 example: "not authorized"
+    #   security:
+    #   - bearerAuth: []
 components:
   schemas:
     users_userId_body:
